<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    android:orientation="vertical"
    tools:context=".ui.MainActivity">

    <TextView
        android:id="@+id/nama_main"
        style="@style/poppinsMedium"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="16dp"
        android:text="@string/app_name"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/project"
        style="@style/poppinsExtraLight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:text="@string/subtitle_app"
        android:textSize="10sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nama_main" />



    <LinearLayout
        android:id="@+id/searchBar"
        android:layout_width="320dp"
        android:layout_height="50dp"
        android:layout_marginTop="72dp"
        android:background="@drawable/bg_search"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <EditText
            android:id="@+id/searchUser"
            style="@style/poppinsRegular"
            android:layout_width="270dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@android:color/transparent"
            android:drawableStart="@drawable/ic_search"
            android:drawablePadding="10dp"
            android:hint="@string/searchbar_hint"
            android:imeOptions="actionSearch"
            android:paddingStart="10dp"
            android:singleLine="true"
            android:textColorHint="@color/white"
            android:textSize="12sp" />

        <ImageButton
            android:id="@+id/btn_search"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:backgroundTint="@color/transparent"
            android:src="@drawable/ic_search_btn"
            />
    </LinearLayout>

    <TextView
        android:id="@+id/userfound"
        style="@style/poppinsLight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/found_user"
        android:textSize="12dp"
        app:layout_constraintEnd_toEndOf="@+id/searchBar"
        app:layout_constraintStart_toStartOf="@+id/searchBar"
        app:layout_constraintTop_toBottomOf="@+id/searchBar" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_searchuser"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="8dp"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/userfound" />

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:visibility="gone" />

</androidx.constraintlayout.widget.ConstraintLayout>